PK10猜冠军的BLL写好  自己测试过：后台生成 PK10的期号，前台显示本期倒计时，显示上一期期号，后台可以手工给每一期设置开奖号，前台下注PK10猜冠军，后台所有跟单 列表中显示出来，点兑奖后能够兑奖

--- a/Niunan.CaiPiao.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
+++ b/Niunan.CaiPiao.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - 牛腩博客</title>
-
+    <script src="~/js/jquery-1.10.2.min.js"></script>
     <link href="/layui/css/layui.css" rel="stylesheet" />
     <script src="/layui/layui.js"></script>
     <style>
