后台跟单功能做好，只是插入北京PK10的猜冠军

--- a/Niunan.CaiPiao.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
+++ b/Niunan.CaiPiao.Web/Areas/Adnn1n/Views/Shared/_Layout.cshtml
@@ -8,13 +8,13 @@
     <link href="/layui/css/layui.css" rel="stylesheet" />
     <script src="/layui/layui.js"></script>
     <style>
-   .layui-form select {
+   /*.layui-form select {
             display: block;
             border: 1px solid #e6e6e6;
             height: 38px;
             line-height: 38px;
             min-width: 100px;
-        }
+        }*/
    .layui-textarea{
        min-height: 300px;
    }
